Even newer update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <button class="header__avatar-edit">
               <img
-                src="./images/Button secondary.png"
+                src="./images/Button_secondary.png"
                 alt="Edit Button"
                 class="header__avatar-edit-image"
               />
@@ -43,7 +43,7 @@
         </section>
         <button class="header__button">
           <img
-            src="./images/Group 26.svg"
+            src="./images/Group_26.svg"
             alt="Plus Symbol"
             class="header__button-symbol"
           />
@@ -62,7 +62,7 @@
             <div class="cards__card-comments">
               <p class="cards__card-description">Val Thorens</p>
               <button class="cards__card-like">
-                <img src="./images/Like Icon.png" alt="Like" />
+                <img src="./images/Like_Icon.png" alt="Like" />
               </button>
             </div>
           </article>
@@ -76,7 +76,7 @@
             <div class="cards__card-comments">
               <p class="cards__card-description">Resturaunt terrace</p>
               <button class="cards__card-like">
-                <img src="./images/Like Icon.png" alt="Like" />
+                <img src="./images/Like_Icon.png" alt="Like" />
               </button>
             </div>
           </article>
@@ -90,7 +90,7 @@
             <div class="cards__card-comments">
               <p class="cards__card-description">An outdoor cafe</p>
               <button class="cards__card-like">
-                <img src="./images/Like Icon.png" alt="Like" />
+                <img src="./images/Like_Icon.png" alt="Like" />
               </button>
             </div>
           </article>
@@ -106,7 +106,7 @@
                 A very long bridge, over the forest...
               </p>
               <button class="cards__card-like">
-                <img src="./images/Like Icon.png" alt="Like" />
+                <img src="./images/Like_Icon.png" alt="Like" />
               </button>
             </div>
           </article>
@@ -120,7 +120,7 @@
             <div class="cards__card-comments">
               <p class="cards__card-description">Tunnel with morning light</p>
               <button class="cards__card-like">
-                <img src="./images/Like Icon.png" alt="Like" />
+                <img src="./images/Like_Icon.png" alt="Like" />
               </button>
             </div>
           </article>
@@ -134,7 +134,7 @@
             <div class="cards__card-comments">
               <p class="cards__card-description">Mountain house</p>
               <button class="cards__card-like">
-                <img src="./images/Like Icon.png" alt="Like" />
+                <img src="./images/Like_Icon.png" alt="Like" />
               </button>
             </div>
           </article>
