New update for my project

--- a/index.html
+++ b/index.html
@@ -26,20 +26,30 @@
             alt="Bessie Coleman"
             class="header__avatar"
           />
-          <div class="header__avatar-bio-section">
-            <ul class="header__avatar-bio">
-              <li class="header__avatar-name">Bessie Coleman</li>
-              <li class="header__avatar-description">Civil Aviator</li>
-            </ul>
+          <form class="header__avatar-bio-section form">
+            <fieldset class="header__avatar-bio">
+              <input
+                type="text"
+                class="header__avatar-name"
+                placeholder="Bessie Coleman"
+              />
+
+              <input
+                type="text"
+                class="header__avatar-description"
+                placeholder="Civil Aviator"
+              />
+            </fieldset>
 
             <button class="header__avatar-edit">
               <img
-                src="./images/Button_secondary.png"
+                src="./images/Group 2.svg"
                 alt="Edit Button"
                 class="header__avatar-edit-image"
               />
+              Edit Profile
             </button>
-          </div>
+          </form>
         </section>
         <button class="header__button">
           <img
