--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Spots</title>
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="icon" href="./favicon.ico" />
-    <link rel="stylesheet" href="./vendor/fonts.css" />
   </head>
   <body>
     <div class="page">
@@ -33,7 +32,7 @@
 
               <button class="profile__avatar-edit" type="button">
                 <img
-                  src="./images/Group 2.svg"
+                  src="./images/Group_2.svg"
                   alt="Edit Button"
                   class="profile__avatar-edit-image"
                 />
