--- a/index.html
+++ b/index.html
@@ -141,5 +141,6 @@
 
       <footer class="footer">2024 © Spots</footer>
     </div>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
