Modal on and off

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="page">
-      <section class="modal">
+      <section class="modal" id="edit-modal">
         <div class="modal__background"></div>
         <div class="modal__container">
           <form class="modal__form">
