--- a/index.html
+++ b/index.html
@@ -21,21 +21,11 @@
             <h2 class="modal__title">Edit Profile</h2>
             <fieldset class="modal__fieldset">
               <label for="name" class="modal__name-label">Name</label>
-              <input
-                type="text"
-                class="modal__name"
-                id="name"
-                placeholder="Type your name"
-              />
+              <input type="text" class="modal__name" id="name" />
               <label for="description" class="modal__description-label"
                 >Description</label
               >
-              <input
-                type="text"
-                class="modal__description"
-                id="description"
-                placeholder="Describe yourself"
-              />
+              <input type="text" class="modal__description" id="description" />
               <button type="submit" class="modal__save">Save</button>
             </fieldset>
             <button type="button" class="modal__close">
