--- a/index.html
+++ b/index.html
@@ -50,19 +50,21 @@
           </button>
         </section>
 
-        <ul class="cards">
-          <template id="cards__template">
-            <li class="cards__item">
-              <img class="cards__image" src="" alt="" />
-              <div class="cards__comments">
-                <h3 class="cards__description"></h3>
-                <button class="cards__like" type="button">
-                  <img src="./images/Like_Icon.svg" alt="Like" />
-                </button>
-              </div>
-            </li>
+        <section class="cards">
+          <template id="card-template">
+            <ul class="card__list">
+              <li class="card__item">
+                <img class="card__image" src="" alt="" />
+                <div class="card__comments">
+                  <h3 class="card__description"></h3>
+                  <button class="card__like" type="button">
+                    <img src="./images/Like_Icon.svg" alt="Like" />
+                  </button>
+                </div>
+              </li>
+            </ul>
           </template>
-        </ul>
+        </section>
       </main>
 
       <footer class="footer">2024 © Spots</footer>
@@ -76,13 +78,11 @@
         </button>
         <form class="modal__form">
           <fieldset class="modal__fieldset">
-            <label for="name" class="fieldset__name-label">Name</label>
-            <input type="text" class="fieldset__name" id="name" />
-            <label for="description" class="fieldset__description-label"
-              >Description</label
-            >
-            <input type="text" class="fieldset__description" id="description" />
-            <button type="submit" class="fieldset__save">Save</button>
+            <label for="name" class="modal__label">Name</label>
+            <input type="text" class="modal__input" id="name" />
+            <label for="description" class="modal__label">Description</label>
+            <input type="text" class="modal__input" id="description" />
+            <button type="submit" class="modal__button">Save</button>
           </fieldset>
         </form>
       </div>
