--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         </section>
 
         <section class="cards">
-          <template id="card-template">
-            <ul class="card__list">
-              <li class="card__item">
+          <ul class="cards__list">
+            <template id="card-template">
+              <li class="card">
                 <img class="card__image" src="" alt="" />
                 <div class="card__comments">
                   <h3 class="card__description"></h3>
@@ -62,8 +62,8 @@
                   </button>
                 </div>
               </li>
-            </ul>
-          </template>
+            </template>
+          </ul>
         </section>
       </main>
 
