--- a/index.html
+++ b/index.html
@@ -96,6 +96,49 @@
       </div>
     </template>
 
+    <template id="post-modal">
+      <div class="modal">
+        <div class="modal__container">
+          <h2 class="modal__title">New post</h2>
+          <button type="button" class="modal__close">
+            <img src="./images/x_button.svg" alt="Close button" />
+          </button>
+          <form class="modal__form">
+            <fieldset class="modal__fieldset">
+              <label for="name" class="modal__label" id="name-label"
+                >Image link</label
+              >
+              <input
+                type="text"
+                class="modal__input"
+                id="name"
+                placeholder="Paste a link to the picture"
+              />
+              <label
+                for="description"
+                class="modal__label"
+                id="description-label"
+                >Caption</label
+              >
+              <input
+                type="text"
+                class="modal__input"
+                id="description"
+                placeholder="Type your caption"
+              />
+              <button type="submit" class="modal__button">Save</button>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+    </template>
+
+    <template id="preview-modal">
+      <div class="modal">
+        <div class="modal__preview-container"></div>
+      </div>
+    </template>
+
     <script src="./scripts/index.js" defer></script>
   </body>
 </html>
