--- a/index.html
+++ b/index.html
@@ -69,75 +69,67 @@
       <footer class="footer">2024 © Spots</footer>
     </div>
 
-    <template id="edit-modal">
-      <div class="modal">
-        <div class="modal__container">
-          <h2 class="modal__title">Edit Profile</h2>
-          <button type="button" class="modal__close">
-            <img src="./images/x_button.svg" alt="Close button" />
-          </button>
-          <form class="modal__form">
-            <fieldset class="modal__fieldset">
-              <label for="name" class="modal__label" id="name-label"
-                >Name</label
-              >
-              <input type="text" class="modal__input" id="name" />
-              <label
-                for="description"
-                class="modal__label"
-                id="description-label"
-                >Description</label
-              >
-              <input type="text" class="modal__input" id="description" />
-              <button type="submit" class="modal__button">Save</button>
-            </fieldset>
-          </form>
-        </div>
+    <div class="modal" id="edit-modal">
+      <div class="modal__container">
+        <h2 class="modal__title">Edit Profile</h2>
+        <button type="button" class="modal__close">
+          <img src="./images/x_button.svg" alt="Close button" />
+        </button>
+        <form class="modal__form">
+          <fieldset class="modal__fieldset">
+            <label for="name" class="modal__label" id="name-label">Name</label>
+            <input type="text" class="modal__input" id="name" />
+            <label for="description" class="modal__label" id="description-label"
+              >Description</label
+            >
+            <input type="text" class="modal__input" id="description" />
+            <button type="submit" class="modal__button">Save</button>
+          </fieldset>
+        </form>
       </div>
-    </template>
+    </div>
 
-    <template id="post-modal">
-      <div class="modal">
-        <div class="modal__container">
-          <h2 class="modal__title">New post</h2>
-          <button type="button" class="modal__close">
-            <img src="./images/x_button.svg" alt="Close button" />
-          </button>
-          <form class="modal__form">
-            <fieldset class="modal__fieldset">
-              <label for="name" class="modal__label" id="name-label"
-                >Image link</label
-              >
-              <input
-                type="text"
-                class="modal__input"
-                id="name"
-                placeholder="Paste a link to the picture"
-              />
-              <label
-                for="description"
-                class="modal__label"
-                id="description-label"
-                >Caption</label
-              >
-              <input
-                type="text"
-                class="modal__input"
-                id="description"
-                placeholder="Type your caption"
-              />
-              <button type="submit" class="modal__button">Save</button>
-            </fieldset>
-          </form>
-        </div>
+    <div class="modal" id="post-modal">
+      <div class="modal__container">
+        <h2 class="modal__title">New post</h2>
+        <button type="button" class="modal__close">
+          <img src="./images/x_button.svg" alt="Close button" />
+        </button>
+        <form class="modal__form">
+          <fieldset class="modal__fieldset">
+            <label for="name" class="modal__label" id="name-label"
+              >Image link</label
+            >
+            <input
+              type="text"
+              class="modal__input"
+              id="name"
+              placeholder="Paste a link to the picture"
+            />
+            <label for="description" class="modal__label" id="description-label"
+              >Caption</label
+            >
+            <input
+              type="text"
+              class="modal__input"
+              id="description"
+              placeholder="Type your caption"
+            />
+            <button type="submit" class="modal__button">Save</button>
+          </fieldset>
+        </form>
       </div>
-    </template>
+    </div>
 
-    <template id="preview-modal">
-      <div class="modal">
-        <div class="modal__preview-container"></div>
+    <div class="modal" id="preview-modal">
+      <div class="modal__preview-container">
+        <img src="" alt="" class="modal__preview-image" />
+        <p class="modal__preview-caption"></p>
+        <button type="button" class="modal__preview-close">
+          <img src="./images/xButtonWhite.svg" alt="close button" />
+        </button>
       </div>
-    </template>
+    </div>
 
     <script src="./scripts/index.js" defer></script>
   </body>
