--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <div class="modal" id="preview-modal">
       <div class="modal__preview-container">
-        <img src="" alt="" class="modal__preview-image" />
+        <img src="#" alt="#" class="modal__preview-image" />
         <p class="modal__preview-caption"></p>
         <button type="button" class="modal__preview-close">
           <img src="./images/xButtonWhite.svg" alt="close button" />
